<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">簡易記帳</string>
    <string name="write">記帳</string>
    <string name="read">紀錄</string>
    <string name="stat">統計</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="confirm">確認</string>
    <string name="syncStart">開始同步…</string>
    <string name="syncTooFast">與上次同步時間過於接近，請稍號再試</string>
    <string name="syncFalure">同步失敗</string>
    <string name="year_month">年/月</string>
    <string name="filter">排序方式</string>
    <string name="settings">設定</string>
    <string name="autoSync">自動同步</string>
    <string name="autoSyncDisable"><strike>自動同步</strike></string>
    <string name="sync">同步</string>
    <string name="syncDisable"><strike>同步</strike></string>
    <string name="disableText" translatable="false">This function is disable: (%1$s)</string>

    <string name="tag">標籤</string>
    <string name="type">類型</string>
    <string name="value">金額</string>
    <string name="remark">備註</string>
    <string name="date">日期</string>
    <string name="showDetail">顯示詳細訊息</string>
    <string name="keepInfo">記帳訊息</string>

    <string name="detailSuffix" translatable="false">%1$dx</string>

    <string name="food">食物</string>
    <string name="trans">交通</string>
    <string name="play">娛樂</string>
    <string name="usually">通常開銷</string>
    <string name="other">其他</string>

    <string name="showPieDetail" formatted="true" translatable="false">%1$s: %2$.2f%%, %3$s: %4$.2f%%, %5$s: %6$.2f%%, %7$s: %8$.2f%%, %9$s: %10$.2f%%</string>

    <string-array name="defaultTag">
        <item>食物</item>
        <item>交通</item>
        <item>娛樂</item>
        <item>通常開銷</item>
    </string-array>

    <string-array name="filter">
        <item>日期</item>
        <item>紀錄時間</item>
        <item>金額(小->大)</item>
        <item>金額(大->小)</item>
        <item>收入/支出</item>
        <item>支出/收入</item>
        <item>標籤</item>
    </string-array>

    <string-array name="statSpinner">
        <item>標籤</item>
        <item>支出入</item>
    </string-array>

</resources>