<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selected"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/banner4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/button_bk" />

    <ImageView
        android:id="@+id/settingsGoBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/autoSync"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/autoSync"
        android:textColor="@color/blue_word"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner4" />

    <TextView
        android:id="@+id/settingT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/settings"
        android:textColor="@color/blue_word_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsGoBack"
        app:layout_constraintStart_toEndOf="@+id/settingsGoBack"
        app:layout_constraintTop_toTopOf="@+id/settingsGoBack" />

    <Button
        android:id="@+id/settingSync"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_bk"
        android:text="@string/sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoSync" />

</androidx.constraintlayout.widget.ConstraintLayout>