<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/payValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/out"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/payMoney"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/payTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payValue" />

    <TextView
        android:id="@+id/payMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="$"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/payValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/payValue" />

    <EditText
        android:id="@+id/payDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="@+id/payValue"
        app:layout_constraintStart_toStartOf="@+id/payValue"
        app:layout_constraintTop_toBottomOf="@+id/payTag" />

    <ImageView
        android:id="@+id/payDateP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/payDate"
        app:layout_constraintEnd_toEndOf="@+id/payMoney"
        app:layout_constraintStart_toStartOf="@+id/payMoney"
        app:layout_constraintTop_toTopOf="@+id/payDate"
        app:srcCompat="@drawable/date" />

    <Button
        android:id="@+id/payConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_bk"
        android:backgroundTintMode="src_over"
        android:text="@string/confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payDate">

        <EditText
            android:id="@+id/payRemark"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@null"
            android:ems="10"
            android:gravity="start|end"
            android:hint="@string/remark"
            android:inputType="textMultiLine"
            android:lines="5"
            android:nestedScrollingEnabled="true"
            android:paddingStart="5dp"
            android:paddingTop="5dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>