<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/incomeValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/in"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/incomeMoney"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/incomeTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeValue" />

    <TextView
        android:id="@+id/incomeMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="$"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/incomeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/incomeValue" />

    <EditText
        android:id="@+id/incomeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="@+id/incomeValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/incomeValue"
        app:layout_constraintTop_toBottomOf="@+id/incomeTag" />

    <ImageView
        android:id="@+id/incomeDateP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/incomeDate"
        app:layout_constraintEnd_toEndOf="@+id/incomeMoney"
        app:layout_constraintStart_toStartOf="@+id/incomeMoney"
        app:layout_constraintTop_toTopOf="@+id/incomeDate"
        app:srcCompat="@drawable/date" />

    <Button
        android:id="@+id/incomeConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_bk"
        android:backgroundTintMode="src_over"
        android:text="@string/confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeDate" />
</androidx.constraintlayout.widget.ConstraintLayout>