<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:fitsSystemWindows="true">

    <!-- main -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/selected">

        <Button
            android:id="@+id/mShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/button_bk"
            android:text="@string/showDetail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <org.lf.android.keepaccounts.view.DetailView
            android:id="@+id/mDetailShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

        </org.lf.android.keepaccounts.view.DetailView>

        <Button
            android:id="@+id/New"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button_bk"
            android:backgroundTintMode="src_over"
            android:onClick="newRecord"
            android:text="@string/write"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/blue_word_light"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/Statistics"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button_bk"
            android:backgroundTintMode="src_over"
            android:onClick="state"
            android:text="@string/read"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/blue_word_light"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/New" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/blue_word"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner3" />

        <ImageView
            android:id="@+id/banner3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/button_bk" />

        <ImageView
            android:id="@+id/mainOption"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/options" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/value"
            app:layout_constraintBottom_toTopOf="@+id/mShowDetail"
            app:layout_constraintStart_toStartOf="@+id/mShowDetail" />

        <TextView
            android:id="@+id/mMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <org.lf.android.keepaccounts.view.PieChartView
            android:id="@+id/mPie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/mMoney"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/optionMenu"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/selected"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/option_menu_header"
        app:itemTextColor="@color/blue_word"
        app:menu="@menu/option_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
