<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selected"
    tools:context=".Statistics">

    <ImageView
        android:id="@+id/banner2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/button_bk" />

    <ImageView
        android:id="@+id/statGoBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Spinner
        android:id="@+id/yearChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/yearT"
        app:layout_constraintTop_toBottomOf="@+id/banner2" />

    <TextView
        android:id="@+id/yearT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/year_month"
        app:layout_constraintBottom_toBottomOf="@+id/yearChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yearChoose" />

    <TextView
        android:id="@+id/filterT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/filter"
        app:layout_constraintBottom_toBottomOf="@+id/filterChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filterChoose" />

    <Spinner
        android:id="@+id/filterChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/filterT"
        app:layout_constraintTop_toBottomOf="@+id/banner2" />

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterT"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/statT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/read"
        android:textColor="@color/blue_word_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/statGoBack"
        app:layout_constraintStart_toEndOf="@+id/statGoBack"
        app:layout_constraintTop_toTopOf="@+id/statGoBack" />
</androidx.constraintlayout.widget.ConstraintLayout>